# terraform-provider-customcrud

./: .gitignore  .terraform.lock.hcl  GNUmakefile  README.md  go.mod  go.sum  main.go
.github/workflows/: lock.yml  python-tests.yml  release.yml  test.yml
META.d/: _summary.yaml
crud/: create.sh  delete.sh  read.sh  update.sh
docs/: index.md
docs/data-sources/: customcrud.md
docs/ephemeral-resources/: customcrud.md
docs/resources/: crud.md  customcrud.md  resource.md
examples/: README.md  main.tf
examples/crud/: delete.sh
examples/ephemeral_with_write_only/: main.tf
examples/ephemeral_with_write_only/hooks/: create.sh  delete.sh  open.sh  read.sh  update.sh
examples/file/: README.md  main.tf
examples/file-python/: README.md  main.tf  pyproject.toml
examples/file-python/src/: file_provider.py
examples/file-python/test/: test_file_provider.py
examples/file/hooks/: create.sh  delete.sh  read.sh  update.sh
examples/modules/file/: main.tf  outputs.tf  provider.tf  variables.tf
examples/provider/: provider.tf
examples/resources/customcrud/: data.tf  resource.tf
examples/secret_file/: README.md  main.tf
examples/secret_file/hooks/: read_secret_version.sh
examples/test_edgecases/: README.md
internal/provider/: custom_data_source.go  custom_data_source_test.go  custom_ephemeral.go  custom_ephemeral_test.go  custom_ephemeral_unit_test.go  custom_resource.go  custom_resource_test.go  output_plan_modifier.go  provider.go  provider_test.go
internal/provider/test_edgecases/: create.sh  main.tf  read.sh
tools/: go.mod  go.sum  tools.go
(+27 files in other folders)
