[tool.poetry]
name = "file-provider"
version = "0.1.0"
description = "A python implementation of the file provider hook"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
file-provider = "src.file_provider:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
